<resources>
    <string name="app_name">X9</string>
    <string name="button_minor">Minor</string>
    <string name="button_moderate">Moderate</string>
    <string name="button_major">Major</string>
    <string name="text_field_report_name">Report Title</string>
    <string name="text_field_report_date">Date</string>
    <string name="text_field_description">Report Description</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="menu_report_type">Report type</string>
    <string name="menu_report_location">Report location</string>
    <string name="log_in">Log in</string>
    <string name="log_out">Log out</string>
    <string name="menu_settings">Settings</string>
    <string name="text_field_username">Username</string>
    <string name="text_field_password">Password</string>
    <string name="text_field_report_location">Report location</string>
    <string name="submit">Submit</string>
    <string name="report_type_option_1">Incident</string>
    <string name="report_type_option_2">Heavy Traffic</string>
    <string name="report_type_option_3">Maintenance</string>
    <string name="report_type_option_4">Police</string>
    <string name="report_type_option_5">Camera</string>
    <string name="report_type_option_6">Pothole</string>
    <string name="report_type_option_7">Other</string>
    <string name="menu">Menu</string>
    <string name="report_page_title">Report Card</string>
    <string name="add_report">Add Report</string>
    <string-array name="report_options">
        <item>@string/report_type_option_1</item>
        <item>@string/report_type_option_2</item>
        <item>@string/report_type_option_3</item>
        <item>@string/report_type_option_4</item>
        <item>@string/report_type_option_5</item>
        <item>@string/report_type_option_6</item>
        <item>@string/report_type_option_7</item>
    </string-array>
    <string name="gender_option1">Male</string>
    <string name="gender_option2">Female</string>
    <string name="gender_option3">Other</string>
    <string-array name="gender_options">
        <item>@string/gender_option1</item>
        <item>@string/gender_option2</item>
        <item>@string/gender_option3</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_report">Report</string>
    <string name="fragment_home">Home</string>
    <string name="fragment_profile">Profile</string>
    <string name="save">Save</string>
    <string name="menu_gender">Select gender</string>
    <string name="profile_first_name">First Name</string>
    <string name="profile_last_name">Last Name</string>
    <string name="profile_top_bar_title">Edit Profile</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="profile_email">Enter email</string>
    <string name="fragment_map">Map</string>
    <string name="fragment_report_list">Reports</string>
    <string name="greeting">Hi!</string>
    <string name="home_options">Would you like to:</string>
    <string name="report_list_shortcut">See the latest reports</string>
    <string name="map_shortcut">Explore the map</string>
    <string name="report_shortcut">Report a problem</string>
    <string name="num_of_reports_blank">You have submitted %s reports so far! Thank you for being part of the community!</string>
    <string name="email_example">user_example@email.com</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="edit_picture">EDIT PICTURE</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="done">DONE</string>
    <string name="email">Email</string>
    <string name="to_be_implemented">To be implemented</string>
    <string name="add_profile_picture">Add Profile Picture</string>
    <string name="icon">icon</string>
</resources>